# sqlflask

./: .gitignore  .hintrc  .pre-commit-config.yaml  Dockerfile  LICENSE  Procfile  README.md  caddyfile  db.sqlite  entrypoint.sh  hello.py  pyproject.toml  requirements.txt  sqlflask.py
data/: db.sqlite
sqlflask/: app.py  config.py
sqlflask/reporting/: shiny_excel_sync.py
sqlflask/static/: lean_six_sigma
sqlflask/templates/: _rows.html  base.html  index.html
sqlflask/views/: columns.py  data_entry.py  databases.py  relationships.py  tables.py  utils.py
templates/: _data_entry.html  _data_list.html  _edit_form.html  _macros.html  _main.html  _row.html  _rows.html  base.html  index.html  main.html  table.html  tabulator.html
test/: test_app.py
views/: columns.py  databases.py  relationships.py  rows.py  tables.py  utils.py
