[project]
name = "sqlflask"
version = "0.1.1"
description = "A minimal Flask + SQLite + HTMX project"
dependencies = [
  "flask>=3.1.1",
  "gunicorn>=23.0.0",
  "python-dotenv>=1.1.0",
  "sentry-sdk[flask]>=2.28.0",
  "sqlite-utils>=3.38",
  "pytest>=7.4.0",
  "pytest-flask>=1.3.0",
  "pytest-cov>=6.1.1",
  "coverage>=7.8.2",
]
